# atsaf

./: .env.template  .gitignore  .pre-commit-config.yaml  DEVLOG.md  PROJECT_LOG.md  README.md  RENEWABLE_PIPELINE_ARCHITECTURE.md  WORKLOG.md  docker-compose.yml  eia_test_data.csv  mlflow.db  pyproject.toml  pytest.ini  report.txt  report_utf8.txt  test_encoding_output.txt
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: heartbeat.txt
.github/workflows/: pre-commit.yml  renewable-hourly.yml  renewable_hourly.yml
R/: README.md
R/EIAapi/: DESCRIPTION  README.Rmd  README.md
archive/: renewable_hourly.yml
artifacts/: leaderboard.parquet  predictions.parquet
artifacts/baseline/: clean.parquet  metadata.json  validation_report.json
artifacts/chapter2/: training_results.parquet
chapters/: 01_eda_forecasting_pipeline_OG.ipynb  atsaf_complete_course.ipynb  renewable_energy_forecasting.ipynb
chapters/archive/: 01_eda_forecasting_pipeline copy.ipynb  01_eda_forecasting_pipeline.ipynb  01_sample_data_exploration.R
chapters/archive/consolidated/: 02_data_quality_preprocessing.ipynb  03_backtesting_evaluation.ipynb  04_transformations_stationarity.ipynb  05_acf_pacf_diagnostics.ipynb  06_exogenous_interventions.ipynb  07_probabilistic_calibration.ipynb  08_hierarchical_multiseries.ipynb  09_special_data_types.ipynb  10_model_selection_ensembling.ipynb
dags/: renewable_hourly.py
data/: clean.parquet  metadata.json  raw.parquet
data/renewable/: forecasts.parquet  generation.parquet  generation_corrected.parquet  modeling_dataset.parquet  renewable.db  run_log.json  skip_log.json  weather.parquet
data/renewable/preprocessing/: negative_values_detail.json  preprocessing_report.json
docker/: build_docker.sh  install_dependencies.sh  install_packages.R  install_python.R  packages.json
docs/: DATASET_BUILDER_REFACTORING.md  DEBUGGING_DATA_GAPS.md  EDA_NOTEBOOK_USAGE.md  IMPLEMENTATION_SUMMARY.md  LEARNING_GUIDE.md  chapter0_time_series_objects.md  chapter10_probabilistic_forecasting.md  chapter11_hierarchical_multiseries.md  chapter12_special_data_types.md  chapter13_model_selection_ensembling.md  chapter1_ingestion.md  chapter2_experimentation.md  chapter3_orchestration.md  chapter4_monitoring.md  chapter5_data_quality.md  chapter6_backtesting_evaluation.md  chapter7_transformations_stationarity.md  chapter8_acf_pacf_diagnostics.md  chapter9_exogenous_interventions.md  correlation_analysis.html  dates_and_time_objects.html  index.html  intro.html  linkedin_renewable_visual.md  pipeline_diagram.mmd  plotting_time_series_objects.html  prerequisites.html  references.html  seasonal_analysis.html  smoothing_methods.html  summary.html  the_timetk_class.html  the_ts_class.html  the_tsibble_class.html  time_series_decomposition.html
notebooks/: ab_testing.ipynb  mlflow.db  renewable_energy_forecasting.ipynb
notebooks/archive/: 01_sample_data_exploration.R
notebooks/archive/consolidated/: 02_data_quality_preprocessing.ipynb  03_backtesting_evaluation.ipynb  04_transformations_stationarity.ipynb  06_exogenous_interventions.ipynb  (+2 more)
scripts/: chapter2_runner.py  fix_solar_data_issues.py  investigate_solar_data_quality.py  run_e2e_eia.py  run_eda_renewable.py
src/: __init__.py
src/air_quality/: __init__.py  airnow.py  cli.py  config.py  dag_builder.py  modeling.py  open_meteo.py  tasks.py
src/chapter0/: __init__.py  objects.py
src/chapter1/: __init__.py  config.py  eia_data_simple.py  ingest.py  prepare.py  validate.py
src/chapter2/: __init__.py  backtesting.py  evaluation.py  feature_engineering.py  models.py  training.py
src/chapter3/: __init__.py  cli.py  config.py  dag_builder.py  io_utils.py  tasks.py
src/chapter4/: __init__.py  alerts.py  config.py  dashboard.py  dashboard_app.py  db.py  drift.py  forecast_store.py  health.py  run_log.py  scoring.py
src/renewable/: dag_builder.py  dashboard.py  data_freshness.py  dataset_builder.py  db.py  eda.py  eia_renewable.py  model_interpretability.py  modeling.py  open_meteo.py  regions.py  tasks.py  validation.py
tests/: __init__.py  test_ch1_fail_loud.py  test_ch2_backtesting.py  test_ch2_metrics.py  test_ch2_smoke.py
tests/renewable/: __init__.py  test_data_quality.py  test_renewable.py  test_runtime_debug_controls.py  test_smoke.py  test_validation_debug.py
(+93 files in other folders)
